[metadata]
package_name = reduceccd
description = Basic Image CCD reduction using CCDPROC package
long_description = Basic Image CCD reduction using CCDPROC package
author = Ruben Garcia-Benito (RGB)
author_email = rgb@iaa.es
license = BSD
url = https://github.com/rgbIAA/reduceccd
edit_on_github = False
github_project = rgbIAA/reduceccd
